# min_max

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  game.rs  main.rs  min_max.rs  power4.rs  scalar.rs
src/game/: connect4.rs  player.rs  power4.rs  state.rs
src/game/connect4/: iteration.rs  tests.rs
src/game/power4/: count_direction.rs  iteration.rs  tests.rs
src/min_max/: node.rs
src/power4/: iteration.rs  tests.rs
