[package]
name = "min_max"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.25"
strum_macros = "0.25"
rayon = "1.8"
rand = "0.8"
console = "0.15"
thousands = "0.2"
parking_lot = "0.12"
smallvec = "1.11"

[profile.release]
debug = true
lto = 'fat'
panic = 'abort'
codegen-units = 1
